[package]
name = "authz-flow-analysis-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authz-flow-analysis = { path = "../authz-flow-analysis" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
axum = "0.5.3"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tower-http = { version = "0.2.5", features = ["trace"] }
reqwest = { version = "0.11.10", features = ["json"] }
thiserror = "1.0.30"
